fix(nest-menu-items): fixed clipping corner issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,4 +42,9 @@ li {
     font-size: 14px;
   }
 
+  ul:first-of-type {
+    border-top-left-radius: 0.5rem;  /* rounded-t-lg */
+    border-top-right-radius: 0.5rem; /* rounded-t-lg */
+  }
+
 }
